# NineGapsGame

./: .cproject  .gitignore  .gitmodules  .project  CMakeLists.txt  Makefile  README.md
libconinteract/: Makefile
libconinteract/include/: ConInteract.h
libconinteract/src/: ClearScreen.c  Menu.c  WaitInput.c
libconinteract/test/: menu.c
random/: Makefile
random/include/: Random.h
random/src/: Random.c
src/: main.c
